--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,13 @@
 # Compiled class file
 *.class
+build/
+.aws-sam/
+pid.file
+nohup.out
+
+# User preferences
+.idea/
+.gradle/
 
 # Log file
 *.log
@@ -21,3 +29,6 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+# ignore graddle wrapper jar
+!gradle/wrapper/gradle-wrapper.jar
